Fix gradient overflow

--- a/scss/_animations.scss
+++ b/scss/_animations.scss
@@ -96,10 +96,10 @@
 
 @keyframes panGradient {
 	0% {
-		transform: translate(-1%, -1%);
+		transform: translate(-3%, -3%);
 	}
 	100% {
-		transform: translate(1%, 1%);
+		transform: translate(3%, 3%);
 	}
 }
 
