--- a/style.css
+++ b/style.css
@@ -614,12 +614,12 @@ header:after {
   content: "";
   position: absolute;
   z-index: 1;
-  width: 120vmax;
-  height: 120vmax;
-  top: -2rem;
-  bottom: -2rem;
-  left: -2rem;
-  right: -2rem;
+  min-width: 120vmax;
+  min-height: 120vmax;
+  top: -60vmax;
+  bottom: -60vmax;
+  left: -60vmax;
+  right: -60vmax;
   width: 2000vmax;
   height: 2000vmax;
   top: -25%;
@@ -1344,10 +1344,10 @@ section > h2 {
 }
 @keyframes panGradient {
   0% {
-    transform: translate(-1%, -1%);
+    transform: translate(-3%, -3%);
   }
   100% {
-    transform: translate(1%, 1%);
+    transform: translate(3%, 3%);
   }
 }
 @keyframes spin {
